[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-consensus"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"

sc-client-api = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sc-consensus = {version = "0.10.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-api = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-block-builder = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-consensus = {version = "0.10.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}

fc-db = {version = "2.0.0-dev", path = "../db"}
fp-consensus = {version = "2.0.0-dev", path = "../../primitives/consensus"}
fp-rpc = {version = "3.0.0-dev", path = "../../primitives/rpc"}
