[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-db"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
kvdb-rocksdb = "0.14.0"
parking_lot = "0.11.2"

codec = {package = "parity-scale-codec", version = "2.0.0", features = ["derive"]}
sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-database = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}

fp-storage = {version = "2.0.0-dev", path = "../../primitives/storage"}
