[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Ethereum RPC (web3) compatibility layer for Substrate."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-rpc"
version = "2.0.0-dev"

[dependencies]
ethereum = {version = "0.11.1", features = ["with-codec"]}
ethereum-types = "0.12"
evm = "0.33.1"
futures = {version = "0.3.1", features = ["compat"]}
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
libsecp256k1 = "0.7"
log = "0.4.8"
lru = "0.6.6"
rand = "0.8"
rlp = "0.5"
sha3 = "0.10"
tokio = {version = "1.14", features = ["sync"]}

codec = {package = "parity-scale-codec", version = "2.0.0"}
sc-client-api = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sc-network = {version = "0.10.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sc-rpc = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sc-service = {version = "0.10.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sc-transaction-pool = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sc-transaction-pool-api = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-api = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-block-builder = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-io = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-storage = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}

fc-db = {version = "2.0.0-dev", path = "../db"}
fc-rpc-core = {version = "1.1.0-dev", path = "../rpc-core"}
fp-rpc = {version = "3.0.0-dev", path = "../../primitives/rpc"}
fp-storage = {version = "2.0.0-dev", path = "../../primitives/storage"}

[features]
rpc_binary_search_estimate = []
