[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "EIP-1559 fee utils"
edition = "2021"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-base-fee"
repository = "https://github.com/paritytech/frontier/"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = {version = "1.0.101", optional = true}

codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
frame-system = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

pallet-evm = {path = "../evm", default-features = false}

[dev-dependencies]
sp-io = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-evm/std",
]
