[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Dynamic fee handling for EVM."
edition = "2021"
license = "Apache-2.0"
name = "pallet-dynamic-fee"
version = "4.0.0-dev"

[dependencies]
async-trait = "0.1"
serde = {version = "1.0.101", optional = true}

codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
frame-system = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-inherents = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-std = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

pallet-evm = {path = "../evm", version = "6.0.0-dev", default-features = false}

[dev-dependencies]
pallet-timestamp = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-io = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-system/std",
  "frame-support/std",
  "pallet-evm/std",
]
