[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME EVM contracts pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-evm"
readme = "README.md"
repository = "https://github.com/paritytech/frontier/"
version = "6.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = {version = "0.33.1", default-features = false, features = ["with-codec"]}
hex = {version = "0.4", default-features = false}
log = {version = "0.4", default-features = false}
primitive-types = {version = "0.10.0", default-features = false, features = ["rlp", "byteorder"]}
rlp = {version = "0.5", default-features = false}
serde = {version = "1.0.101", optional = true, features = ["derive"]}
sha3 = {version = "0.8", default-features = false}

codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-io = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-std = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

frame-benchmarking = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false, optional = true}
frame-support = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
frame-system = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
pallet-balances = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
pallet-timestamp = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

fp-evm = {version = "3.0.0-dev", default-features = false, path = "../../primitives/evm"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
]
std = [
  "evm/std",
  "evm/with-serde",
  "hex/std",
  "log/std",
  "primitive-types/std",
  "rlp/std",
  "serde",
  "sha3/std",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-timestamp/std",
  "fp-evm/std",
]
