[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Frontier consensus"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "fp-consensus"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
ethereum = {version = "0.11.1", default-features = false, features = ["with-codec"]}

codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-runtime = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-std = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "ethereum/std",
  "codec/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
