[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "fp-evm"
repository = "https://github.com/paritytech/frontier/"
version = "3.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = {version = "0.33.1", default-features = false, features = ["with-codec"]}
serde = {version = "1.0.101", features = ["derive"], optional = true}

codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-std = {version = "4.0.0", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "evm/std",
  "evm/with-serde",
  "serde",
  "codec/std",
  "sp-core/std",
  "sp-std/std",
]
