[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "BN128 precompiles for EVM pallet."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-evm-precompile-bn128"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
bn = {package = "substrate-bn", version = "0.6", default-features = false}

sp-core = {version = "4.1.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

fp-evm = {version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false}

[dev-dependencies]
pallet-evm-test-vector-support = {version = "1.0.0-dev", path = "../../test-vector-support"}

[features]
default = ["std"]
std = [
  "sp-core/std",
  "fp-evm/std",
]
