[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "DISPATCH precompiles for EVM pallet."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-evm-precompile-dispatch"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
frame-support = {version = "4.0.0-dev", git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

fp-evm = {version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false}
pallet-evm = {version = "6.0.0-dev", path = "../..", default-features = false}

[features]
default = ["std"]
std = [
  "frame-support/std",
  "fp-evm/std",
  "pallet-evm/std",
]
